[package]
name = "poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.15"
reqwest = { version = "0.11.4", features = ["json"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }